--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "devDependencies": {
     "parcel": "^2.9.2",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "vm-browserify": "^1.1.2"
   },
   "repository": {
     "type": "git",
