--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@supabase/supabase-js": "^2.24.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1"
   },
